[package]
name = "nannou_playground"
version = "0.1.0"
edition = "2018"
default-run = "heightfield"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17.1"
ndarray = "0.15.3"

[profile.release]
debug = true
incremental = true
codegen-units = 256
